
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mdforge"
version = "0.1.0.dev0"
description = "Unified MD/FF/QM toolkit — Tinker & OpenMM, SPICE/HIPPO parametrization"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "joblib>=1.3",
    "h5py>=3.9",
]

[project.scripts]
mdforge-eval = "mdforge.liquid.evaluate.__main__:main"

[project.optional-dependencies]
# Tinker engine: binaries are located externally; no pip-installable dependency.
tinker = []
# OpenMM engine + ML potentials (MACE-OFF23 / UMA etc.)
openmm = [
    "openmm>=8.0",
    "openmmml>=0.5",
]
# Torch-based ML extras (needed for MACE, etc.)
ml = [
    "torch>=2.1",
]
# Plotting + tabular output (liquid/plots.py, qm/compare.py, qm/plots.py)
viz = [
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "pandas>=2.0",
]
# Optional: rdkit for SMILES-based monomer inference in qm/interaction.py
chem = [
    "rdkit>=2023.3",
]
# Optional: read HOOMD-blue rigid-body GSD trajectories (formats/gsd.py)
gsd = [
    "gsd>=3.0",
]
# Optional: YAML config for the liquid-evaluation module (liquid/evaluate/)
evaluate = [
    "pyyaml>=6.0",
]
# Development / testing tools
dev = [
    "ruff>=0.4",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "pandas>=2.0",
    "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"mdforge.liquid.evaluate.references" = ["*.json", "*.txt", "*.md"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
